src/app/pages/portfolio/portfolio.component.scss
img.avatar {
    object-fit: cover;
    vertical-align: middle;
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin: 20px;
    border: 5px solid white;
    background-color: white;
  }

.cover-photo {
  width: 100%;
  height: 35vh;
  background-size: cover;
  border: 1px solid black;
  border-radius: 5px;
  background-repeat: no-repeat;
  background-position-y: 34%;
}

.profile-details-row {
  margin-top: -75px;
}

.profile-details-row .name-location-row {
  margin-top: 20px;
}

@media only screen and (max-width: 575px) {
  .profile-details-row .name-location-row {
    margin-top: -10px;
  }
}

